added a couple models, removed some tests i dont understand, added mongoose as a middleware for our DB

--- a/myapp/views/agreement.jade
+++ b/myapp/views/agreement.jade
@@ -5,5 +5,8 @@ block header-content
     +title_header('/main', 'Investment Agreement')
 
 block content
-    p agreement goes here.
+    p 
+       Agreement Information will be hardcoded into this as it wont change 
+    p
+        and the content doesnt matter too much
 
