--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -4,6 +4,7 @@ block header-content
     div.header
         img(src="./images/pure_logo.png").logo
         h1.page-title Peninsula Investors
+        h6 an LLC
         hr.title-header-bar
 
 block menu
@@ -15,7 +16,5 @@ block menu
             li: a(href="/roster") Roster 
             li: a(href="/chat") Chat 
             li: a(href="/agreement") Agreement 
-            li: a(href="/roster") Roster
             li: a(href="/tips") Tips
-            li: a(href="/calendar") Calendar
   div.footer
