added the beginnings of the chat module

--- a/myapp/views/chat.jade
+++ b/myapp/views/chat.jade
@@ -5,5 +5,6 @@ block header-content
     +title_header('/main', 'Chat Room')
 
 block content
-    p chat goes here.
-
+    .controls
+        input.field(style="width:350px;")
+        input.send(type='button', value='send')
